Resolves: fdo#86799 fix insert special char in Find/Find and Replace

regression from

7f7d2213209dd8e23292ec5a85fbab6127824c49
author	Caolán McNamara <caolanm@redhat.com>	2014-10-13 09:25:26 (GMT)
osl_Module -> osl::Module

Change-Id: Idb8fec23bdd0ee3ea0488047aadaf21e3cd2900f