sfx2/source/appl/appinit.cxx
@@ -181,7 +181,7 @@ OUString GetSpecialCharsForEdit(vcl::Window* pParent, const vcl::Font& rFont)
 
 #ifndef DISABLE_DYNLOADING
         osl::Module aMod;
-        aMod.loadRelative(&thisModule, "cui", 0);
+        aMod.loadRelative(&thisModule, SVLIBRARY("cui"), 0);
 
         // get symbol
         OUString aSymbol( "GetSpecialCharsForEdit"  );
